# QIKI_DTMP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DEVELOPER_PRINCIPLES.md  ANTI_FRAUD_DOCUMENTATION_PROTOCOL.md  AUDIT_REPORT_20250731.md  AUTHOR_STAGE0.md  CLAUDE_CODE_AUDIT_FINDINGS.md  CLAUDE_CRITICAL_FINDINGS.md  CLAUDE_MEMORY.md  CLAUDE_PROJECT_ANALYSIS.md  CLAUDE_VALIDATION_REPORT_2025_08_19.md  CONTEXT_HANDOVER.md  CONTRIBUTING.md  CURRENT_STATE.md  DEEP_CODE_ANALYSIS_2025-09-22.md  DEEP_DATA_ANALYSIS_2025-09-22.md  DOCKER_FIRST_ANALYSIS.md  DOCUMENTATION_UPDATE_PROTOCOL.md  Dockerfile.dev  Dockerfile.nats  FILEDEVELOPER.md  FINAL_COMPREHENSIVE_VALIDATION_PLAN.md  FINAL_SURPRISE_REPORT.md  GEMINI_FSM_VALIDATION_RESULT.md  GEMINI_FSM_VALIDATION_TASK.md  GEMINI_FSM_VALIDATION_TASK_CORRECTED.md  GEMINI_STRESS_TEST_RESULTS.md  GITHUB_RESEARCH_GUIDE.md  GRPC_MIGRATION_PLAN.md  GRPC_MIGRATION_PLAN_CORRECTED.md  GRPC_TECHNICAL_ANALYSIS.md  HOT_TEST_REPORT_20250815_164923.md  HOT_TEST_STATESTORE_REPORT.md  IMPLEMENTATION_ROADMAP.md  LOG.MD  LOG_ANALYSIS_2025-09-22.md  NEXT_TASKS_ROADMAP.md  (+78 more)
UP/: dto.py  (+24 more)
introspector/: .gitignore  ASSEMBLY_COMPARISON_REPORT_20260503.md  BASELINE.md  CHANGES.md  CONSOLIDATION_MANIFEST.json  CONSOLIDATION_REPORT.md  FINAL_CORRECT_ASSEMBLY_STATUS_20260503.md  FINAL_HANDOFF_STATUS_20260503.md  FINAL_RELEASE_GATE_LOG_20260503.txt  FINAL_TEST_HANDOFF_STATUS_20260503.md  NEW_BASE_ACCEPTANCE.md  NEW_BASE_AUDIT.md  NEW_BASE_MERGE_REPORT.md  README.md  REPORT_QUALITY_PLAN.md  TUI_OPERATOR_DATATABLE_REPORT_20260503.md  (+6 more)
(+1843 files in other folders)
