[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-introspector"
version = "0.1.0"
description = "Internal tool v1 for static and runtime Python service introspection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
llm = [
  "httpx>=0.27",
]
tui = [
  "textual>=0.58",
  "platformdirs>=4.0",
]
otel = [
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
  "opentelemetry-exporter-otlp>=1.30",
]
service = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
project-introspector = "project_introspector.cli:main"
project-introspector-tui = "project_introspector.tui_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"tests/test_analyzer_integration.py" = ["E402"]
"tests/test_core_stability.py" = ["E402"]
"tests/test_storage_layer.py" = ["E402"]
